--- a/formulario-receitas/estilo.css
+++ b/formulario-receitas/estilo.css
@@ -5,6 +5,7 @@ label, input, select, textarea{
     margin-bottom: 20px;
 }
 h2{
+    text-align: center;
     color: rgb(233, 71, 100);
 }
 .roboto-thin {
